added hotel photos and description

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   </head>
 
   <body>
+    <!----------header section------------------>
+
     <header>
       <div class="jumbotron callout-container">
         <div>
@@ -38,10 +40,52 @@
         </div>
 
         <div>
-          <h1 class="callout-title">Right where you've always wanted to be</h1>
+          <h1 class="callout-title">Where you've always wanted to be</h1>
         </div>
       </div>
     </header>
+
+    <!----------about section------------------>
+    <div>
+      <h1 class="about-heading">A dream by the sea</h1>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 about-paragraph-container">
+        <p class="about-paragraph">
+          Sicily, an island distinctive in both its history and culture offers
+          even seasoned travellers a unique and memorable taste of the
+          Mediterranean. We look forward to welcoming you to this truly
+          fascinating island.
+        </p>
+      </div>
+      <div class="col-lg-6 hotel-photo-frame">
+        <img
+          src="assets/images/hotel-photo.jpg"
+          alt="hotel image"
+          class="hotel-image"
+        />
+      </div>
+    </div>
+    <!----------hotels section------------------>
+    <div>
+      <h1 class="about-heading">Our Hotels</h1>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 hotel-photo-frame">
+        <img
+          src="assets/images/hotel-front.jpg"
+          alt="hotel image"
+          class="hotel-image"
+        />
+      </div>
+      <div class="col-lg-6 about-paragraph-container">
+        <p class="about-paragraph">
+          We have an exclusive collection of hotels, beach resorts and
+          rural retreats to suit all tastes and budgets throughout the island
+          for a short break, relaxing holiday or multicentre tour.
+        </p>
+      </div>
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
