added dining jumbotron and styling for other sections

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           Mediterranean. We look forward to welcoming you to this truly
           fascinating island.
         </p>
+        <div>
+          <a href="" class="see-more-link">See More</a>
+        </div>
       </div>
       <div class="col-lg-6 hotel-photo-frame">
         <img
@@ -70,7 +73,7 @@
     <div>
       <h1 class="about-heading">Our Hotels</h1>
     </div>
-    <div class="row">
+    <div class="row hotels-section">
       <div class="col-lg-6 hotel-photo-frame">
         <img
           src="assets/images/hotel-front.jpg"
@@ -80,12 +83,25 @@
       </div>
       <div class="col-lg-6 about-paragraph-container">
         <p class="about-paragraph">
-          We have an exclusive collection of hotels, beach resorts and
-          rural retreats to suit all tastes and budgets throughout the island
-          for a short break, relaxing holiday or multicentre tour.
+          We have an exclusive collection of hotels, beach resorts and rural
+          retreats to suit all tastes and budgets throughout the island for a
+          short break, relaxing holiday or multicentre tour.
         </p>
+        <div>
+          <a href="" class="see-more-link">Book now</a>
+        </div>
       </div>
     </div>
+    <!----------dining experience section------------------>
+    <div class="jumbotron dining-experioence-container">
+      <div>
+        <h1 class="dining-title">A dining experience like no other</h1>
+      </div>
+    </div>
+    <!------------------------footer------------------>
+   <footer>
+   
+   </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
