--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
           Mediterranean. We look forward to welcoming you to this truly
           fascinating island.
         </p>
-        <div>
-          <a href="" class="see-more-link">See More</a>
+        <div class="link-container">
+          <a href="" class="see-more-link">See More</a><br>
+          <div class="link-underline"></div>
         </div>
       </div>
       <div class="col-lg-6 hotel-photo-frame">
@@ -88,20 +89,68 @@
           short break, relaxing holiday or multicentre tour.
         </p>
         <div>
-          <a href="" class="see-more-link">Book now</a>
+          <a href="" class="see-more-link">Book now</a><br>
+         <div class="link-underline"></div>
         </div>
       </div>
     </div>
     <!----------dining experience section------------------>
     <div class="jumbotron dining-experioence-container">
       <div>
-        <h1 class="dining-title">A dining experience like no other</h1>
+        <h1 class="dining-title">Dining experiences like no other</h1>
       </div>
     </div>
     <!------------------------footer------------------>
-   <footer>
-   
-   </footer>
+    <footer class="container-fluid">
+
+    <div class="row">
+
+    <div class="col-3">
+    </div>
+
+      <form class="keep-in-touch-container container-fluid col-6">
+      <h2 class="keep-in-touch-title">Keep in Touch</h2>
+      <p>For any information about our hotel, or if you need special assistance, or if you just want to 
+      be updated about seasonal offers and promotions, please fill this form! We will reply as soon as possibile, thank you!</p>
+        <div class="form-group row ">
+          <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10 form-box">
+            <input type="email" class="form-control" id="inputEmail3" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputPhone3" class="col-sm-2 col-form-label">Phone</label>
+          <div class="col-sm-10">
+            <input type="phone" class="form-control" id="inputPhone3" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputName3" class="col-sm-2 col-form-label">Name</label>
+          <div class="col-sm-10">
+            <input type="Name" class="form-control" id="inputName3" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputCountry3" class="col-sm-2 col-form-label">Country</label>
+          <div class="col-sm-10">
+            <input type="country" class="form-control" id="inputCountry3" />
+          </div>
+        </div>
+        <div class="mb-3">
+    <label for="validationTextarea">Message</label>
+    <textarea class="form-control is-invalid" id="validationTextarea" required></textarea>
+    
+  </div>
+  
+
+<button type="button" class="btn btn-primary request-button">Send Request</button>
+      </form>
+
+      <div class="col-3">
+      </div>
+
+      </div>
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
