--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
     </header>
 
     <!----------about section------------------>
-    <div>
-      <h1 class="about-heading">A dream by the sea</h1>
+    <div class="heading-container">
+      <h1 class="about-heading">A dream by the sea</h1><br>
+       <div class="header-underline"></div>
     </div>
+    <br>
     <div class="row">
       <div class="col-lg-6 about-paragraph-container">
         <p class="about-paragraph">
@@ -71,9 +73,11 @@
       </div>
     </div>
     <!----------hotels section------------------>
-    <div>
+    <div class="heading-container">
       <h1 class="about-heading">Our Hotels</h1>
+       <div class="header-underline"></div>
     </div>
+    <br>
     <div class="row hotels-section">
       <div class="col-lg-6 hotel-photo-frame">
         <img
