finished keep in touch section

--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@
     <div class="row">
       <div class="col-lg-6 about-paragraph-container">
         <p class="about-paragraph">
-          Sicilian cuisine has its own identity bursting with intense, fruity and aromatic flavours
-           and offers a rich repertoire of dishes with locally grown delicious produce and a fantastic selection of restaurants
+          Sicilian cuisine has its own identity bursting with intense, fruity
+          and aromatic flavours and offers a rich repertoire of dishes with
+          locally grown delicious produce and a fantastic selection of
+          restaurants
         </p>
         <div class="link-container">
           <a href="" class="see-more-link">Reserve a table</a><br />
@@ -132,15 +134,20 @@
         />
       </div>
     </div>
-    
-    <!------------------------footer------------------>
-    <footer class="container-fluid">
+
+    <!----------keep in touch section------------------>
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-3">
-        
+        <div class="col-sm-4 links-section">
+        <h3 class="link-title">FAQ</h3>
+        <div class="link-line"></div>
+          <h3 class="link-title">PRIVACY POLICY</h3>
+          <div class="link-line"></div>
+            <h3 class="link-title">CREDITS</h3>
+            <div class="link-line"></div>
         </div>
 
-        <form class="keep-in-touch-container container-fluid col-6">
+        <form class="keep-in-touch-container container-fluid col-sm-4">
           <h2 class="keep-in-touch-title">Keep in Touch</h2>
           <p>
             For any information about our hotel, or if you need special
@@ -192,7 +199,34 @@
           </button>
         </form>
 
-        <div class="col-3">
+        <div class="col-sm-4 contact-info">
+        <h3 class="contact-title">ADDRESS</h3>
+        <p class="contact-paragraph">fergus thompson <br>
+        fergus lane <br>
+        3677499 <br>
+        sicily</p>
+        <h3 class="contact-title">CONTACTS</h3>
+        <p class="contact-paragraph">T +39 081 801 5757 <br>
+           F +39 081 879 8747</p>
+        <h3 class="contact-title">CONNECT</h3>
+        <p class="contact-paragraph">info@fergusthompson.com</p>
+        <i class="fa fa-facebook-f"></i><span class="link-divider">|</span>
+
+        <i class="fa fa-instagram"></i>
+        </div>
+      </div>
+    </div>
+    <!----------footer---------------->
+    <footer class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="footer-line"></div>
+        </div>
+        <div class="col-sm-6 footer-credit">
+        <p>© 2020 Fergus Thompson Creative - all right reserved</p>
+        </div>
+        <div class="col-sm-3">
+        <div class="footer-line"></div>
         </div>
       </div>
     </footer>
