added jquery for animations on page

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       type="text/css"
     />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/javascript/index.js"></script>
+    
   </head>
 
   <body>
@@ -51,7 +50,7 @@
     <div class="heading-container">
       <h1 class="about-heading">A dream by the sea</h1>
       <br />
-      <div class="header-underline"></div>
+      <div class="about-header-underline"></div>
     </div>
     <br />
     <div class="row">
@@ -63,8 +62,8 @@
           fascinating island.
         </p>
         <div class="link-container">
-          <a href="" class="see-more-link">See More</a><br />
-          <div class="link-underline"></div>
+          <a href="" class="see-more-link">See More</a><br>
+          <div class="see-link-underline"></div>
         </div>
       </div>
       <div class="col-lg-6 hotel-photo-frame">
@@ -78,7 +77,7 @@
     <!----------hotels section------------------>
     <div class="heading-container">
       <h1 class="about-heading">Our Hotels</h1>
-      <div class="header-underline"></div>
+      <div class="hotels-header-underline"></div>
     </div>
     <br />
     <div class="row hotels-section">
@@ -96,8 +95,8 @@
           short break, relaxing holiday or multicentre tour.
         </p>
         <div>
-          <a href="" class="see-more-link">Book now</a><br />
-          <div class="link-underline"></div>
+          <a href="" class="book-now-link">Book now</a><br>
+          <div class="book-link-underline"></div>
         </div>
       </div>
     </div>
@@ -110,7 +109,7 @@
     <div class="heading-container">
       <h1 class="about-heading">Our Restaurants</h1>
       <br />
-      <div class="header-underline"></div>
+      <div class="dining-header-underline"></div>
     </div>
     <br />
     <div class="row">
@@ -122,8 +121,8 @@
           restaurants
         </p>
         <div class="link-container">
-          <a href="" class="see-more-link">Reserve a table</a><br />
-          <div class="link-underline"></div>
+          <a href="#" class="reserve-link">Reserve a table</a><br>
+          <div class="reserve-link-underline"></div>
         </div>
       </div>
       <div class="col-lg-6 hotel-photo-frame">
@@ -136,14 +135,14 @@
     </div>
 
     <!----------keep in touch section------------------>
-    <div class="container-fluid">
+    <div class="container-fluid link-container">
       <div class="row">
         <div class="col-sm-4 links-section">
-        <h3 class="link-title">FAQ</h3>
+        <a href="" class="link-title">FAQ</a>
         <div class="link-line"></div>
-          <h3 class="link-title">PRIVACY POLICY</h3>
+          <a href="" class="link-title">PRIVACY POLICY</a>
           <div class="link-line"></div>
-            <h3 class="link-title">CREDITS</h3>
+            <a href="" class="link-title">CREDITS</a>
             <div class="link-line"></div>
         </div>
 
@@ -201,15 +200,15 @@
 
         <div class="col-sm-4 contact-info">
         <h3 class="contact-title">ADDRESS</h3>
-        <p class="contact-paragraph">fergus thompson <br>
+        <h3 class="contact-paragraph">fergus thompson <br>
         fergus lane <br>
         3677499 <br>
-        sicily</p>
+        sicily</h3>
         <h3 class="contact-title">CONTACTS</h3>
-        <p class="contact-paragraph">T +39 081 801 5757 <br>
-           F +39 081 879 8747</p>
+        <h3 class="contact-paragraph">T +39 123 456 7899 <br>
+           F +39 123 456 7898</h3>
         <h3 class="contact-title">CONNECT</h3>
-        <p class="contact-paragraph">info@fergusthompson.com</p>
+        <h3 class="contact-paragraph">info@fergusthompson.com</h3>
         <i class="fa fa-facebook-f"></i><span class="link-divider">|</span>
 
         <i class="fa fa-instagram"></i>
@@ -246,5 +245,7 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+    <script type="text/javascript" src="assets/javascript/index.js"></script>
   </body>
 </html>
