--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
   <!-- Overlay content -->
   <div class="overlay-content">
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Clients</a>
+    <a href="#">Hotels</a>
+    <a href="#">Dining</a>
+    <a href="#">Book Now</a>
     <a href="#">Contact</a>
   </div>
 
