added booking form and started styling logo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="overlay-content">
     <a href="#">Hotels</a>
     <a href="#">Dining</a>
-    <a href="#">Book Now</a>
+    <a href="booking.html">Book Now</a>
     <a href="#">Contact</a>
   </div>
 
@@ -117,7 +117,7 @@
           short break, relaxing holiday or multicentre tour.
         </p>
         <div>
-          <a href="" class="book-now-link">Book now</a><br>
+          <a href="booking.html" class="book-now-link">Book now</a><br>
           <div class="book-link-underline"></div>
         </div>
       </div>
