--- a/booking.html
+++ b/booking.html
@@ -32,9 +32,6 @@
    <div>
           <ul class="nav nav-pills">
           <li class="nav-item">
-              <a class="nav-link active" href="index.html">home</a>
-            </li>
-          <li class="nav-item">
               <div id="myNav" class="overlay">
 
   <!-- Button to close the overlay navigation -->
@@ -44,7 +41,7 @@
   <div class="overlay-content">
     <a href="#">Hotels</a>
     <a href="#">Dining</a>
-    <a href="#">Book Now</a>
+    <a href="booking.html">Book Now</a>
     <a href="#">Contact</a>
   </div>
 
@@ -56,8 +53,15 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Book Now</a>
             </li>
+            <li>
+            
+             </li>
           </ul>
+         
         </div>
+        <div class="logo">
+ <a href="index.html"><img src="assets/images/1.jpg" alt="" class=""></a>
+         </div>
 
         <!----------------booking section--------->
 
@@ -80,6 +84,77 @@
       <div id="map"></div>
       </div>
     </div>
+
+
+		<div class="section-center">
+			<div class="container">
+				<div class="row">
+					<div class="booking-form">
+						<div class="form-header">
+							<h1>Make your reservation</h1>
+						</div>
+						<form>
+							<div class="row">
+								<div class="col-md-6">
+									<div class="form-group">
+										<span class="form-label">Check In</span>
+										<input class="form-control" type="date" required="">
+									</div>
+									<span class="in-out hidden-xs hidden-sm">⇌</span>
+								</div>
+								<div class="col-md-6">
+									<div class="form-group">
+										<span class="form-label">Check out</span>
+										<input class="form-control" type="date" required="">
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-3">
+									<div class="form-group">
+										<span class="form-label">No of rooms</span>
+										<select class="form-control">
+											<option>1</option>
+											<option>2</option>
+											<option>3</option>
+										</select>
+										<span class="select-arrow"></span>
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="form-group">
+										<span class="form-label">Adults</span>
+										<select class="form-control">
+											<option>1</option>
+											<option>2</option>
+											<option>3</option>
+										</select>
+										<span class="select-arrow"></span>
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="form-group">
+										<span class="form-label">Children</span>
+										<select class="form-control">
+											<option>0</option>
+											<option>1</option>
+											<option>2</option>
+										</select>
+										<span class="select-arrow"></span>
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="form-btn">
+										<button class="submit-btn">Check availability</button>
+									</div>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	
 
 
  <!----------keep in touch section------------------>
